<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/ic_company"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/role"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBookMark"
            />

        <ImageView
            android:id="@+id/btnBookMark"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_bookmark_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/place"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            />

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:text="@string/salary"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="12dp"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/tvSalary"
            app:layout_constraintTop_toBottomOf="@+id/tvSalary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>